--- a/Server/package.json
+++ b/Server/package.json
@@ -14,7 +14,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
-    "graphql": "^16.6.0",
+    "graphql": "15.3.0",
     "moongose": "^1.0.0"
   },
   "devDependencies": {
