--- a/Client/package.json
+++ b/Client/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.3",
+    "formik": "^2.2.9",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.5.0"
+    "react-router-dom": "^6.5.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
