--- a/Server/Dockerfile
+++ b/Server/Dockerfile
@@ -1,6 +1,7 @@
 FROM node:16
+RUN npm i -g nodemon
 WORKDIR /app
 COPY . .
 RUN npm i
 EXPOSE 5000
-CMD ["node","index.js"]
+CMD ["npm","run","server"]
